<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item android:title="">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/history_check_in"
                        android:checked="true"
                        android:title="@string/history_check_in" />

                    <item
                        android:id="@+id/personal_info"
                        android:title="@string/personal_information" />
                    <item
                        android:id="@+id/change_pwd"
                        android:title="@string/change_pwd" />

                    <item
                        android:id="@+id/introduction"
                        android:title="@string/introduction" />

                    <item
                        android:id="@+id/setting"
                        android:title="@string/setting" />

                    <item
                        android:id="@+id/logout"
                        android:title="@string/logout" />


                </group>
            </menu>
        </item>
    </group>

</menu>