<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_scan_qr"
        android:orderInCategory="200"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/menu_add_write_review"
        android:icon="@drawable/ic_add_white_36dp"
        android:orderInCategory="300"
        android:title="@string/action_write_review"
        app:showAsAction="ifRoom" />
</menu>