<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".65"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_default_avatar_profile" />


            <TextView
                android:id="@+id/txtNameProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_name_temp"
                android:textColor="@color/material_black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".4"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_user_name" />

        <EditText
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:text="@string/user_name_profile" />

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_full_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_icon"
            android:drawableLeft="@drawable/ic_user_3"
            android:text="@string/user_name_temp"
            style="@style/EditTextProfileStyle" />

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_icon"
            android:drawableLeft="@drawable/ic_email_1"
            android:text="@string/email_profile_display"
            style="@style/EditTextProfileStyle" />


        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_icon"
            android:text="@string/phone_profile"
            android:drawableLeft="@drawable/ic_call"
            style="@style/EditTextProfileStyle" />


    </LinearLayout>

</LinearLayout>