<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_old_pwd" />

        <EditText
            android:id="@+id/edtOldPwd"
            android:padding="8dp"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext_normal" />

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_pwd" />

        <EditText
            android:padding="8dp"
            android:id="@+id/edtPwd"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext_normal" />

        <TextView
            style="@style/LabelProfileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reinput_pwd" />

        <EditText
            android:id="@+id/edtReEnterPwd"
            android:padding="8dp"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_cancel" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_save"
                android:theme="@style/AppTheme.Button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>