<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/button_login_social_width"
        android:layout_height="@dimen/logo_app_hight_default"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo_app" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="@dimen/button_login_social_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_login_social_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_button_login"
            android:text="@string/login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGoToSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_login_social_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/color_button_login"
            android:text="@string/sign_up" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_login_social_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/color_button_login"
            android:text="@string/continue_hint" />
    </LinearLayout>


</LinearLayout>